src-tauri/check_runner_ext_v2.txt
cargo :    Compiling fireworks-collaboration v0.1.0 (C:\Users\34404\Documents\GitHub\fireworks-collaboration\src-tauri)
所在位置 行:1 字符: 1
+ cargo check --lib 2>&1 | Out-File -Encoding UTF8 check_runner_ext_v2. ...
+ ~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling fi...tion\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0599]: no variant or associated item named `Cancelled` found for enum `ErrorCategory` in the current scope
  --> src\core\git\default_impl\clone.rs:62:49
   |
62 |         return Err(GitError::new(ErrorCategory::Cancelled, "Clone cancelled"));
   |                                                 ^^^^^^^^^ variant or associated item not found in `ErrorCategory`
   |
  ::: src\core\git\errors.rs:4:1
   |
4  | pub enum ErrorCategory {
   | ---------------------- variant or associated item `Cancelled` not found for this enum
   |
help: there is a variant with a similar name
   |
62 -         return Err(GitError::new(ErrorCategory::Cancelled, "Clone cancelled"));
62 +         return Err(GitError::new(ErrorCategory::Cancel);
   |

error[E0599]: no variant or associated item named `Cancelled` found for enum `ErrorCategory` in the current scope
  --> src\core\git\default_impl\fetch.rs:44:49
   |
44 |         return Err(GitError::new(ErrorCategory::Cancelled, "Fetch cancelled"));
   |                                                 ^^^^^^^^^ variant or associated item not found in `ErrorCategory`
   |
  ::: src\core\git\errors.rs:4:1
   |
4  | pub enum ErrorCategory {
   | ---------------------- variant or associated item `Cancelled` not found for this enum
   |
help: there is a variant with a similar name
   |
44 -         return Err(GitError::new(ErrorCategory::Cancelled, "Fetch cancelled"));
44 +         return Err(GitError::new(ErrorCategory::Cancel);
   |

error[E0614]: type `(dyn GitRunner + std::marker::Send + Sync + 'static)` cannot be dereferenced
   --> src\core\git\default_impl\mod.rs:115:14
    |
115 |             &**self.runner,
    |              ^^^^^^^^^^^^^ can't be dereferenced

error[E0614]: type `(dyn GitRunner + std::marker::Send + Sync + 'static)` cannot be dereferenced
   --> src\core\git\default_impl\mod.rs:200:14
    |
200 |             &**self.runner,
    |              ^^^^^^^^^^^^^ can't be dereferenced

Some errors have detailed explanations: E0599, E0614.
For more information about an error, try `rustc --explain E0599`.
error: could not compile `fireworks-collaboration` (lib) due to 4 previous errors
